--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/startRouteFragment"
+    <item android:id="@+id/routeFragment"
         android:title="@string/start_route_title"
         android:icon="@drawable/ic_navigation_24" />
 
