*Add Recycler Module to Routes and Detail

--- a/app/src/main/res/layout/fragment_my_routes.xml
+++ b/app/src/main/res/layout/fragment_my_routes.xml
@@ -23,28 +23,27 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent=".95" />
 
+        <TextView
+            android:id="@+id/tv_my_routes_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/my_routes_title"
+            android:textColor="@color/colorBlack"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline_header"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_v_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_v_left"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/iv_map"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_routes"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_v_right"
-            app:layout_constraintStart_toStartOf="@+id/guideline_v_left"
-            app:layout_constraintTop_toTopOf="@+id/guideline_header" />
-
-        <TextView
-            android:id="@+id/tv_route"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mis Rutas"
-            android:textAlignment="center"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/guideline_footer"
-            app:layout_constraintEnd_toStartOf="@+id/guideline_v_right"
-            app:layout_constraintStart_toStartOf="@+id/guideline_v_left"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline_header" />
 
 
 
