--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,19 @@
         <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
+    <style name="ButtonStyleRed">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:minWidth">100dp</item>
+        <item name="android:layout_height">75dp</item>
+        <item name="android:backgroundTint">@color/colorRed</item>
+        <item name="android:textColor">@drawable/txt_white</item>
+        <item name="cornerRadius">15dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:focusable">false</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
     <style name="ButtonStyleNormal">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:minWidth">100dp</item>
