--- a/app/src/main/res/layout/fragment_my_routes.xml
+++ b/app/src/main/res/layout/fragment_my_routes.xml
@@ -7,7 +7,7 @@
         android:id="@+id/container_my_route"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.MyRoutesFragment">
+        tools:context=".view.myroutes.MyRoutesFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_header"
