--- a/app/src/main/res/layout/fragment_route.xml
+++ b/app/src/main/res/layout/fragment_route.xml
@@ -7,7 +7,7 @@
         android:id="@+id/container_route"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.RouteFragment">
+        tools:context=".view.startroute.RouteFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_header"
